new font added to navabar

--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -23,13 +23,22 @@
     <script src="path/to/jspdf.debug.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Admin Panel</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+      </style>
    <style>
       #toast-container > .toast-success {
    background-color: rgb(10, 182, 10) !important;
-   
- }
-
+   }
  </style>
+   <style>
+    .comfortaa-uniquifier {
+      font-family: "Comfortaa", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: 300;
+      font-style: normal;
+    }
+      </style>
  <!----------- toaster css ------------->
     <style>
       #toast-container > .toast-error {
@@ -1407,60 +1416,60 @@ video {
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/dashboard" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                     <i class="ri-home-2-line mr-3 text-lg"></i>
-                    <span class="text-sm font-normal">Dashboard</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950">Dashboard</span>
                 </a>
             </li>
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/userManagement" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm font-normal">Users</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950">Users</span>
                 </a>
             </li>
     
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/product-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm font-normal">Products</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950">Products</span>
                 </a>
             </li>
     
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/category-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm font-normal">Categories</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950">Categories</span>
                 </a>
             </li>
     
             <li class="mb-5 group  border-b border-gray-300 ">
                 <a href="/admin/sortOrderAdmin/recentOrders" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm font-normal">Orders</span>
+                    <span class="text-sm comfortaa-uniquifier">Orders</span>
                 </a>
             </li>
     
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/coupon-list" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm font-normal">Coupons</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950">Coupons</span>
                 </a>
             </li>
     
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/offerManagement" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm font-normal">Offers</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950">Offers</span>
                 </a>
             </li>
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/salesReport" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                    
-                    <span class="text-sm font-normal">Sales</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950">Sales</span>
                 </a>
             </li>
             <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/admin-logout" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                
-                    <span class="text-sm font-normal">Logout</span>
+                    <span class="text-sm comfortaa-uniquifier text-gray-950">Logout</span>
                 </a>
             </li>
         </ul>
