--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,9 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.tailwindcss.com"></script> 
   
-
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+    </style>
   <!----------- toaster css ------------->
   <style>
     #toast-container > .toast-error {
@@ -112,6 +114,15 @@
       }
     }
   </style>
+  <style>
+
+.comfortaa-uniquifier {
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+}
+  </style>
   <script>
     import {
       Dropdown,
@@ -173,12 +184,12 @@
             </button>
           </div>
           <div class="flex space-x-4">
-            <a href="/home" class="michroma-regular relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Home</span> <span>Home</span></a>
-            <a href="/shopping" class="michroma-regular relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Shopping</span> <span>Shopping</span></a>
-            <a href="/wishlist" class="michroma-regular relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Wishlist</span> <span>Wishlist</span></a>
-            <a href="/cart" class="michroma-regular relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Cart</span> <span>Cart</span></a>
-            <a href="/userProfile" class="michroma-regular relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">My Account</span> <span>My Account</span></a>
-            <a href="/logout" class="michroma-regular relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3"> Logout</span> <span>Logout</span></a>
+            <a href="/home" class="comfortaa-uniquifier relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Home</span> <span>Home</span></a>
+            <a href="/shopping" class="comfortaa-uniquifier relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Shopping</span> <span>Shopping</span></a>
+            <a href="/wishlist" class="comfortaa-uniquifier relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Wishlist</span> <span>Wishlist</span></a>
+            <a href="/cart" class="comfortaa-uniquifier relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">Cart</span> <span>Cart</span></a>
+            <a href="/userProfile" class="comfortaa-uniquifier relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3">My Account</span> <span>My Account</span></a>
+            <a href="/logout" class="comfortaa-uniquifier relative inline-block px-3 py-2 text-xs my-5 font-thin group"><span class="absolute inset-0 bg-gray-500 transform scale-y-0 origin-bottom transition-transform duration-300 group-hover:scale-y-100 hover:text-white pt-2 pl-3"> Logout</span> <span>Logout</span></a>
           </div>
         </div>
       </div>
