wallet responsive done :

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -203,11 +203,11 @@
               </svg>
             </span>
           </button>
-          <a href="/shopping" class="michroma-regular text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-base font-medium">Shopping</a>
-          <a href="/wishlist" class="michroma-regular text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-base font-medium">Wishlist</a>
-          <a href="/cart" class="michroma-regular text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-base font-medium">Cart</a>
-          <a href="/userProfile" class="michroma-regular text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-base font-medium">My Account</a>
-          <a href="/logout" class="michroma-regular text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-base font-medium">Logout</a>
+          <a href="/shopping" class="comfortaa-uniquifier text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-xs font-medium">Shopping</a>
+          <a href="/wishlist" class="comfortaa-uniquifier text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-xs font-medium">Wishlist</a>
+          <a href="/cart" class="comfortaa-uniquifier text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-xs font-medium">Cart</a>
+          <a href="/userProfile" class="comfortaa-uniquifier text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-xs font-medium">My Account</a>
+          <a href="/logout" class="comfortaa-uniquifier text-gray-950 hover:text-cyan-500 block rounded-md px-1 py-1 text-xs font-medium">Logout</a>
         </div>
       </div>
     </div>
