--- a/views/user/wallet.ejs
+++ b/views/user/wallet.ejs
@@ -5,102 +5,91 @@
     <%- include('../partials/userProfileSidebar') %>
 </section>
 
-<div class="flex flex-col pr-96">
+<div class="flex flex-col">
 
-<section class=" text-gray-600 mt-12 p-16">
-  <div class="flex flex-col h-full">
-      <div class="w-full mx-auto  bg-gray-800 shadow-lg rounded-sm border border-gray-200">
-          <header class="px-5 py-4 border-b border-gray-100">
-              <h2 class="font-semibold text-white">Wallet</h2>
-          </header>
-          <div class="p-3">
+
+    <section class="text-gray-600 mt-12 p-6 sm:p-16">
+        <div class="flex flex-col h-full">
+          <div class="w-full mx-auto bg-gray-400 shadow-lg rounded-sm border border-gray-200">
+            <header class="px-5 py-4 border-b border-gray-100">
+              <h2 class="font-semibold text-gray-900 text-center">Wallet</h2>
+            </header>
+            <div class="p-3">
               <div class="overflow-x-auto">
-                  <table class="table-auto w-full">
-                      <thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-100 h-8">
-                          <tr class="">
-                              <th class="pl-24 whitespace-nowrap">
-                                  <div class="font-semibold text-left">wallet.status</div>
-                              </th>
-                              <th class="pl-24 whitespace-nowrap">
-                                  <div class="font-semibold text-left">Balance</div>
-                              </th>
-                          </tr>
-                      </thead>
-                      <tbody class="text-sm divide-y divide-gray-100">
-                          <tr>
-                              <% if(wallet) { %>
-                                <td class="pl-24 pt-5 whitespace-nowrap">
-                                    <div class="text-left font-medium text-green-500"> <%= wallet.status %> </div>
-                                </td>
-                                <td class="pl-24 pt-5 whitespace-nowrap">
-                                    <div class="text-left font-medium text-green-500"> <%= wallet.amount %>₹ </div>
-                                </td>
-                              <% }else{ %>
-                                <td class="pl-24 pt-5 whitespace-nowrap">
-                                    <div class="text-left font-medium text-green-500"> Non Active </div>
-                                </td>
-                                <td class="pl-24 pt-5 whitespace-nowrap">
-                                    <div class="text-left font-medium text-green-500"> 0₹ </div>
-                                </td>
-                                <% } %>
-                          </tr>
-                      </tbody>
-                  </table>
+                <table class="table-auto w-full">
+                  <thead class="text-xs sm:text-sm md:text-base font-semibold uppercase text-gray-900 bg-gray-100">
+                    <tr class="">
+                      <th class="pl-3 sm:pl-5 md:pl-8 whitespace-nowrap">
+                        <div class="font-semibold text-left">Status</div>
+                      </th>
+                      <th class="pl-3 sm:pl-5 md:pl-8 whitespace-nowrap">
+                        <div class="font-semibold text-left">Balance</div>
+                      </th>
+                    </tr>
+                  </thead>
+                  <tbody class="text-xs sm:text-sm md:text-base divide-y divide-gray-100">
+                    <tr>
+                      <% if(wallet) { %>
+                      <td class="pl-3 sm:pl-5 md:pl-8 pt-3 sm:pt-4 md:pt-5 whitespace-nowrap">
+                        <div class="text-left font-medium text-gray-900"> <%= wallet.status %> </div>
+                      </td>
+                      <td class="pl-3 sm:pl-5 md:pl-8 pt-3 sm:pt-4 md:pt-5 whitespace-nowrap">
+                        <div class="text-left font-medium text-gray-900"> <%= wallet.amount %>₹ </div>
+                      </td>
+                      <% }else{ %>
+                      <td class="pl-3 sm:pl-5 md:pl-8 pt-3 sm:pt-4 md:pt-5 whitespace-nowrap">
+                        <div class="text-left font-medium text-gray-900"> Non Active </div>
+                      </td>
+                      <td class="pl-3 sm:pl-5 md:pl-8 pt-3 sm:pt-4 md:pt-5 whitespace-nowrap">
+                        <div class="text-left font-medium text-gray-900"> 0₹ </div>
+                      </td>
+                      <% } %>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
+            </div>
           </div>
-      </div>
-  </div>
-</section>
+        </div>
+      </section>
+      
 
 <!------------------------- Transaction -------------------->
-   <section class="bg-stone-400">
+   <section>
             <header class="px-5 py-4 border-b border-gray-100">
                 <h2 class="font-semibold text-gray-950">Transactions</h2>
             </header>
-                    <table class="table-auto w-full">
-                        <thead class="text-xs font-semibold uppercase text-gray-400 bg-gray-100 h-8">
-                            <tr class="">
-                                <th class="pl-24 whitespace-nowrap">
-                                    <div class="font-semibold text-left">Transaction Id</div>
-                                </th>
-                                <th class="pl-24 whitespace-nowrap">
-                                    <div class="font-semibold text-left">Discount Price</div>
-                                </th>
-                                <th class="pl-24 whitespace-nowrap">
-                                    <div class="font-semibold text-left">Date</div>
-                                </th>
-                                <th class="pl-24 whitespace-nowrap">
-                                    <div class="font-semibold text-left">Total Amount</div>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody class="text-sm divide-y divide-gray-100">
-                            
-                            <%  orders.forEach(order => { %>
-                                <tr>
-                                  <td class="pl-24 pt-5 whitespace-nowrap">
-                                      <div class="text-left font-thin text-gray-950"> <%= order.ordId %> </div>
-                                  </td>
-                                  <td class="pl-24 pt-5 whitespace-nowrap">
-                                      <div class="text-left font-thin text-gray-950"> <%= order.discountPrice %> </div>
-                                  </td>
-                                  <td class="pl-24 pt-5 whitespace-nowrap">
-                                      <div class="text-left font-thin text-gray-950">
-                                        <% var createDate = new Date(order.createdate), date = createDate.toLocaleDateString(); %>
-                                        <p><%= date %></p>
-                                     </div>
-                                  </td>
-                                  <td class="pl-24 pt-5 whitespace-nowrap">
-                                      <div class="text-left font-thin text-gray-950"> <%= order.total %>₹ </div>
-                                  </td>
-                                <% }) %>
-                            </tr>
-                        </tbody>
-                    </table>
+                  
+            <div class="shadow-lg rounded-lg overflow-hidden mx-4 md:mx-10 bg-gray-800">
+                <table class="w-full table-fixed">
+                    <thead>
+                        <tr class="bg-gray-300 ">
+                            <th class="w-1/4 py-4 px-6 text-sm text-left text-gray-600 font-bold uppercase">Transaction Id</th>
+                            <th class="w-1/4 py-4 px-6 text-sm text-left text-gray-600 font-bold uppercase">Discount Price</th>
+                            <th class="w-1/4 py-4 px-6 text-sm text-left text-gray-600 font-bold uppercase">Date</th>
+                            <th class="w-1/4 py-4 px-6 text-sm text-left text-gray-600 font-bold uppercase">Total Amount</th>
+                        </tr>
+                    </thead>
+                    <tbody class="bg-white">
+                        <%  orders.forEach(order => { %>
+                        <tr>
+                            <td class="py-4 px-6 border-b border-gray-200 text-xs"><%= order.ordId %></td>
+                            <td class="py-4 px-6 border-b border-gray-200 text-xs truncate"><%= order.discountPrice %>₹</td>
+                            <td class="py-4 px-6 border-b border-gray-200 text-xs">  <% var createDate = new Date(order.createdate), date = createDate.toLocaleDateString(); %><p><%= date %></p></td>
+                            <td class="py-4 px-6 border-b border-gray-200 text-xs"><%= order.total %>₹</td>
+                        </tr>
+                        <% }) %>
+                    </tbody>
+                </table>
+            </div>
+
+
+
        
   </section>
 
 </div>
+
 </main>
 
 <%- include('../partials/footer') %>
