--- a/views/admin/orderManagement.ejs
+++ b/views/admin/orderManagement.ejs
@@ -103,13 +103,18 @@
                 </td>
                   <td>
                     <% if(order.return){ %>
+                      <% if(order.status != "returnRejected" && order.status != "returnAccepted"){ %>
                       <div class="relative inline-block ">
                         <a href="/admin/orderDetailsAdmin/<%= order.id %>">
                           <img class="h-3.5 w-3.5 ml-9" src="/images/resume.png" alt="order details">
                       </a>
                         <span class="absolute top-0 right-0 inline-flex rounded-full h-2 w-2 bg-green-500 "></span>
                       </div>
-                      
+                      <% }else{ %>
+                        <a href="/admin/orderDetailsAdmin/<%= order.id %>">
+                          <img class="h-3.5 w-3.5 ml-9" src="/images/resume.png" alt="order details">
+                      </a>
+                        <% } %>
                      <% }else{ %>
                       <a href="/admin/orderDetailsAdmin/<%= order.id %>">
                         <img class="h-3.5 w-3.5 ml-9" src="/images/resume.png" alt="order details">
