order cancel bug fixed user

--- a/views/user/orderDetailsUser.ejs
+++ b/views/user/orderDetailsUser.ejs
@@ -247,7 +247,9 @@
                   orderId : orderId,
                   reason: reason
               })
-          }) 
+          }).then(() => {
+            window.location =   `/orderDetailsUser/${orderId}`;
+          })
       };
 
 
