--- a/views/admin/offerManagement.ejs
+++ b/views/admin/offerManagement.ejs
@@ -96,7 +96,7 @@
                     <span>  <%= pro.price %> </span>
                 </td>
                 <td class="border-t-0  align-middle px-24 border-l-0 border-r-0 text-xs whitespace-nowrap py-3">
-                    <span> <%= pro.offer[0].offerPrice %> </span>
+                    <span> <%= pro.offer %> </span>
                 </td>
                 <td class="border-t-0  align-middle px-24 border-l-0 border-r-0 text-xs whitespace-nowrap py-3">
                     <button class="deleteOffer" value="<%= pro.id %>"> del/ </button>
