--- a/views/user/shopping.ejs
+++ b/views/user/shopping.ejs
@@ -51,9 +51,9 @@
                                      <%= product.productName %>
                                 </a>
                             <p class="mt-1 text-sm text-gray-500"><%= product.color %></p>
-                            <% if(product.offer) { %>
-                                <h1 class="text-1xl font-medium line-through text-red-400">₹<%- product.price %>.00</h1>
-                                <h1 class="text-1xl font-medium">₹<%- product.offer %>.00</h1>
+                            <% if(product.offer.length == 1){ %>
+                                <h1 class="text-1xl font-medium line-through text-red-400">₹<%- product.offer[0].originalPrice %>.00</h1>
+                                <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
                               <% } else { %>
                                 <h1 class="text-1xl font-medium">₹<%- product.price %>.00</h1>
                               <% } %>
