--- a/views/user/verify-otp.ejs
+++ b/views/user/verify-otp.ejs
@@ -28,8 +28,7 @@
                 <button type="submit" class="bg-teal-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
                     Verify
                 </button>
-                <!-- <a id="resendOTP" class="inline-block align-baseline font-bold text-sm text-teal-500 hover:text-teal-800 ml-4" href="#">Resend OTP</a> -->
-
+                <a id="resendOTP" class="inline-block align-baseline font-bold text-sm text-teal-500 hover:text-teal-800 ml-4" href="#">Resend OTP</a>
             </div>
         </form>
     </div>
@@ -60,6 +59,30 @@
             }
         }
     });
+
+
+
+    document.getElementById('resendOTP').addEventListener('click', function(event) {
+                event.preventDefault();
+                fetch('/resend-otp', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRF-TOKEN': document.querySelector('meta[name="csrf-token"]').getAttribute('content')
+                    }
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        toastr.success(data.message);
+                    } else {
+                        toastr.error(data.message);
+                    }
+                })
+                .catch(error => {
+                    toastr.error('Error resending OTP');
+                });
+            });
   </script>
 </body>
 
